Fix incorrect breakpoint value, and increase gap and size of certain elements

--- a/src/styles/_instruments.scss
+++ b/src/styles/_instruments.scss
@@ -18,17 +18,17 @@
   padding: 0.5rem;
 }
 
-@media screen and (max-height: 4.5rem) {
+@media screen and (max-height: 45rem) {
   .instrument-single {
-    height: 5rem;
-    min-width: 5rem;
+    height: 6rem;
+    min-width: 6rem;
   }
 
   .instrument-group {
     display: grid;
     -moz-column-gap: 0.5rem;
-    column-gap: 0.35rem;
-    row-gap: 0.5rem;
+    column-gap: 0.45rem;
+    row-gap: 0.6rem;
   }
 }
 
